# lanceDB-viewer

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agent/rules/: gemini-coding-rules.md  project-coding-rule.md
.agent/skills/git-release/: SKILL.md
.agent/skills/plan-first-coding/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: demo-script.md  github-metadata.md  outreach-kit.md  sample-data.md
src/: App.js  App.tsx  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs
src-tauri/src/services/: mod.rs  scanner.rs  settings.rs
src/components/: DataTable.js  DataTable.tsx
src/lib/: api.js  api.ts  config.js  config.ts  types.ts
tests/: README.md
tests/frontend/: smoke.test.ts
tools/: README.md  version-sync.js
workspace/: failed_log.txt  failed_log2.txt  failed_log2_utf8.txt  plan.md  raw_logs.txt  review.md  success_log.txt  success_utf8.txt  summary.md  task.md  walkthrough.md
workspace/archive/: 20260218_plan_LanceDB Viewer (Windows) Plan.md  20260225_plan_data-view-enhancement.md  20260225_review_data-view-enhancement.md  20260225_task_data-view-enhancement.md  20260322_plan_Column Visibility Toggle.md  20260323_plan_Schema Column Sorting.md  20260323_task_Schema Column Sorting.md
