[package]
name = "lancedb-viewer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
walkdir = "2"
dirs = "5"
lancedb = "0.10"
tokio = { version = "1", features = ["rt", "macros"] }
rfd = "0.15"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
